--- a/modules/system/security/system-permissions/toc.yml
+++ b/modules/system/security/system-permissions/toc.yml
@@ -1,5 +1,5 @@
 - name: Overview
   href: index.md
-- name: Manage access permissions
+- name: Manage Access Permissions
   href: manage-access-permissions.md
   
