--- a/modules/crm/pricing/determining-algorithms/toc.yml
+++ b/modules/crm/pricing/determining-algorithms/toc.yml
@@ -1,9 +1,9 @@
 - name: Overview
   href: index.md
-- name: Determine line discount 
+  topicHref: index.md
+- name: Determine line discount
   href: determine-line-discount.md
 - name: Determine product price
   href: determine-product-price.md
 - name: Pricing
   href: pricing.md
-  
