--- a/modules/logistics/wms/how-to/other-settings/toc.yml
+++ b/modules/logistics/wms/how-to/other-settings/toc.yml
@@ -1,4 +1,4 @@
 - name: Overview
   href: index.md
-- name: Modify the displayed information inside an order
+- name: Modify the displayed information in an order
   href: change-order-display-format.md
