--- a/modules/logistics/inventory/inventory-control/toc.yml
+++ b/modules/logistics/inventory/inventory-control/toc.yml
@@ -18,5 +18,5 @@
   href: command-list.md
 - name: Measurement unit of the order
   href: ChooseUnit.md
-- name: The bin
+- name: The Bin
   href: the_bin.md
