--- a/modules/logistics/concepts/goods-cost/toc.yml
+++ b/modules/logistics/concepts/goods-cost/toc.yml
@@ -4,4 +4,6 @@
   href: original-cost-calculation/toc.yml  
 - name: Cost correction
   href: cost-correction/toc.yml
+- name: Costing methods
+  href: costing-methods/toc.yml
   
