--- a/advanced/jobs/toc.yml
+++ b/advanced/jobs/toc.yml
@@ -18,3 +18,5 @@
   href: J35666.md
 - name: J38417 Delete old audit logs
   href: J38417.md
+- name: J38458 Complete unfinished time entries
+  href: J38458.md
