--- a/modules/toc.yml
+++ b/modules/toc.yml
@@ -1,22 +1,30 @@
 - name: Overview
   href: index.md
+  topicHref: index.md
 - name: My
   href: my/toc.yml
   topicHref: my/index.md
 - name: CRM
   href: crm/toc.yml
+  topicHref: crm/index.md  
 - name: Finance
   href: financials/toc.yml
+  topicHref: financials/index.md  
 - name: General
   href: general/toc.yml
+  topicHref: general/index.md  
 - name: Logistics
   href: logistics/toc.yml
+  topicHref: logistics/index.md  
 - name: Production
   href: production/toc.yml
+  topicHref: production/index.md  
 - name: Projects
   href: projects/toc.yml
+  topicHref: projects/index.md  
 - name: Applications
   href: applications/toc.yml
+  topicHref: applications/index.md    
 - name: System
   href: system/toc.yml
   topicHref: system/index.md
