--- a/modules/applications/mssync/toc.yml
+++ b/modules/applications/mssync/toc.yml
@@ -1,9 +1,8 @@
 - name: Overview
   href: index.md
-- name: Home
-  href: home.md
-- name: Setup
-  href: setup.md
-- name: Service
-  href: service.md
-  
+- name: Getting started
+  href: getting-started/toc.yml
+  topicHref: getting-started/index.md
+- name: Sync jobs
+  href: sync-jobs/toc.yml
+  topicHref: sync-jobs/index.md
