--- a/advanced/jobs/toc.yml
+++ b/advanced/jobs/toc.yml
@@ -20,3 +20,5 @@
   href: J38417.md
 - name: J38458 Complete unfinished time entries
   href: J38458.md
+- name: J38662 Calculate historical Reporting currency amounts
+  href: J38662.md
