--- a/advanced/jobs/toc.yml
+++ b/advanced/jobs/toc.yml
@@ -22,3 +22,5 @@
   href: J38458.md
 - name: J38662 Calculate historical Reporting currency amounts
   href: J38662.md
+- name: J38722 Complete old store orders
+  href: J38722.md
