--- a/advanced/calculated-attributes/QA/toc.yml
+++ b/advanced/calculated-attributes/QA/toc.yml
@@ -12,6 +12,8 @@
   href: How-to-determine-the-party-type-of-a-party.md
 - name: How to get attribute value from list?
   href: How-to-get-attribute-value-from-list.md
+- name: How-to get a custom property value?
+  href: How-to-get-a-custom-property-value.md
 - name: How to get a specific field of a parent document?
   href: How-to-get-specific-field-of-a-parent-document.md
 - name: How to show contact of a person in person's navigator?
