--- a/advanced/calculated-attributes/QA/toc.yml
+++ b/advanced/calculated-attributes/QA/toc.yml
@@ -10,13 +10,13 @@
   href: How-to-create-an-optimally-fast-calculated-attribute.md
 - name: How to determine the party type of a party?
   href: How-to-determine-the-party-type-of-a-party.md
-- name: How to get attribute value from list?
+- name: How to get attribute value from a list?
   href: How-to-get-attribute-value-from-list.md
-- name: How-to get a custom property value?
+- name: How to get a custom property value?
   href: How-to-get-a-custom-property-value.md
 - name: How to get a specific field of a parent document?
   href: How-to-get-specific-field-of-a-parent-document.md
-- name: How to show contact of a person in person's navigator?
+- name: How to show the contact of a person in a person's navigator?
   href: How-to-show-contact-of-a-person-in-persons-navigator.md
 - name: How to use a customer as a company?
   href: How-to-use-a-customer-as-a-company.md
