--- a/advanced/calculated-attributes/examples/toc.yml
+++ b/advanced/calculated-attributes/examples/toc.yml
@@ -36,3 +36,5 @@
   href: get-atp.md
 - name: Executed and Remaining Quantities for Warehouse Order Lines
   href: executed-and-remaining-quantities-for-warehouse-order-lines.md  
+- name: Execution Status for Warehouse Orders
+  href: execution-status-for-warehouse-orders.md
