--- a/advanced/calculated-attributes/examples/toc.yml
+++ b/advanced/calculated-attributes/examples/toc.yml
@@ -38,3 +38,5 @@
   href: executed-and-remaining-quantities-for-warehouse-order-lines.md  
 - name: Execution Status for Warehouse Orders
   href: execution-status-for-warehouse-orders.md
+- name: Requisition Type.md
+  href: requisition-type.md  
