--- a/modules/logistics/wms/how-to/toc.yml
+++ b/modules/logistics/wms/how-to/toc.yml
@@ -20,6 +20,6 @@
 - name: Other settings
   href: other-settings/toc.yml
   topicHref: other-settings/index.md
-  href: Setup Warehouse Manager View
+- href: Setup Warehouse Manager View
   topicHref: setup-warehouse-manager-view.md
   
