--- a/modules/crm/clientcenter/toc.yml
+++ b/modules/crm/clientcenter/toc.yml
@@ -1,6 +1,6 @@
 - name: Overview
   href: index.md
-- name: Reference
+- name: Settings and errors
   href: reference.md
 - name: Grid control
   href: grid-control.md
