--- a/modules/projects/agile/configuration-and-structure/toc.yml
+++ b/modules/projects/agile/configuration-and-structure/toc.yml
@@ -2,5 +2,5 @@
   href: index.md
 - name: Main setup
   href: main-setup/toc.yml
-- name: Project definitions
+- name: Definitions
   href: project-definitions/toc.yml
