--- a/modules/system/security/how-to/toc.yml
+++ b/modules/system/security/how-to/toc.yml
@@ -1,4 +1,4 @@
 - name: How to
   href: index.md
-- name: Invite a user in WEB instance
-  href: invite-a-user-in-web-instance.md
+- name: Invite a user in a WEB instance
+  href: invite-a-user-in-a-web-instance.md
