--- a/modules/system/security/how-to/toc.yml
+++ b/modules/system/security/how-to/toc.yml
@@ -1,4 +1,4 @@
 - name: How to
   href: index.md
 - name: Invite a user to a WEB instance
-  href: invite-a-user-to-a-web-instance.md
+  href: invite-a-user.md
