--- a/modules/projects/agile/toc.yml
+++ b/modules/projects/agile/toc.yml
@@ -2,3 +2,5 @@
   href: index.md
 - name: Configuration and structure
   href: configuration-and-structure/toc.yml
+- name: Cases
+  href: cases/toc.yml
