--- a/modules/projects/agile/toc.yml
+++ b/modules/projects/agile/toc.yml
@@ -4,3 +4,5 @@
   href: configuration-and-structure/toc.yml
 - name: Cases
   href: cases/toc.yml
+- name: Advanced Features
+  href: advanced-features/toc.yml
