--- a/modules/system/security/toc.yml
+++ b/modules/system/security/toc.yml
@@ -11,4 +11,4 @@
   topicHref: ui-functions/index.md
 - name: How to
   href: how-to/toc.yml
-  topicHref: groups/index.md
+  topicHref: how-to/index.md
