--- a/modules/projects/agile/cases/toc.yml
+++ b/modules/projects/agile/cases/toc.yml
@@ -2,7 +2,7 @@
   href: index.md
 - name: Case creation
   href: case-creation.md
-- name: Comments & Developments
+- name: Comments & developments
   href: comments-and-developments.md
 - name: Workflow states
   href: workflow-states.md
