--- a/modules/projects/agile/toc.yml
+++ b/modules/projects/agile/toc.yml
@@ -2,13 +2,13 @@
   href: index.md
 - name: Configuration and structure
   href: configuration-and-structure/toc.yml
-  topicHref: configuration-and-structure/index.html
+  topicHref: configuration-and-structure/index.md
 - name: Cases
   href: cases/toc.yml
-  topicHref: cases/index.html
+  topicHref: cases/index.md
 - name: Advanced features
   href: advanced-features/toc.yml
-  topicHref: advanced-features/index.html
+  topicHref: advanced-features/index.md
 - name: Security
   href: security.md
   
