--- a/modules/projects/agile/configuration-and-structure/toc.yml
+++ b/modules/projects/agile/configuration-and-structure/toc.yml
@@ -2,5 +2,7 @@
   href: index.md
 - name: Main setup
   href: main-setup/toc.yml
+  topicHref: main-setup/index.md
 - name: Definitions
   href: project-definitions/toc.yml
+  topicHref: project-definitions/index.md
